[package]
name = "rusty-gum"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "rgum"

[dependencies]
anyhow = "1.0.62"
dialoguer = { git = "https://github.com/RobWalt/dialoguer", branch = "feat/multi-fuzz-selection", features = ["fuzzy-select"] }
structopt = "0.3.26"
structopt-derive = "0.4.18"
