[package]
name = "rusty-gum"
version = "0.0.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "gum", "dialoguer", "tool"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "A tool for rusty shell scripts"
homepage = "https://github.com/RobWalt/rusty-gum"
repository = "https://github.com/RobWalt/rusty-gum"
documentation = "https://docs.rs/rusty-gum"
readme = "README.md"

[[bin]]
path = "src/bin/main.rs"
name = "rgum"

[dependencies]
anyhow = "1.0.62"
dialoguer = { git = "https://github.com/RobWalt/dialoguer", branch = "feat/multi-fuzz-selection", features = ["fuzzy-select"] }
structopt = "0.3.26"
structopt-derive = "0.4.18"
