[package]
name = "rusty-gum"
version = "0.0.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "gum", "dialoguer", "tool"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "A tool for rusty shell scripts"
homepage = "https://github.com/RobWalt/rusty-gum"
repository = "https://github.com/RobWalt/rusty-gum"
documentation = "https://docs.rs/rusty-gum"
readme = "README.md"

[[bin]]
path = "src/bin/main.rs"
name = "rgum"

[dependencies]
anyhow = "1.0"
dialoguer = { version = "0.10", features = ["fuzzy-select", "password"] }
structopt = "0.3"
structopt-derive = "0.4"
